# redpanda-university

./: LICENSE  readme.md
hands-on-redpanda-getting-started/: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  readme.md
hands-on-redpanda-getting-started/.zellij/: layout.kdl
hands-on-redpanda-getting-started/src/: consumer.py  producer.py
kafka-building-blocks/.zellij/: layout.kdl
kafka-building-blocks/02-communication-layer/: pyproject.toml
kafka-building-blocks/02-communication-layer/producer-examples/: producer_helper.py
